fixed: margin hero section on mobile and width section cards

--- a/css/style.css
+++ b/css/style.css
@@ -426,45 +426,44 @@ img {
 .svg-logo {
   width: 28px; }
 
-.section {
-  padding: 7.4rem 0; }
-  .section--dark {
-    background-color: #131313;
-    color: #fff; }
-  .section-title {
-    text-align: center; }
-    .section-title--left {
-      text-align: left; }
-    .section-title__heading {
-      text-transform: uppercase;
-      font-family: 'Yeseva One', cursive;
-      line-height: 138%; }
-      .section-title__heading--primary {
-        color: #E3B873; }
-    .section-title__word {
-      display: flex;
-      align-items: center;
-      margin-bottom: 1.6rem; }
-      .section-title__word::after {
-        content: '';
-        width: 90px;
-        height: 1.5px;
-        background-color: #E3B873;
-        margin-left: 2.4rem; }
-    .section-title__text {
-      font-size: 1.28rem;
-      line-height: 2.07rem;
-      max-width: 31.57rem; }
-    .section-title__image {
-      display: flex;
-      align-items: center;
-      justify-content: center; }
-      .section-title__image::before, .section-title__image::after {
-        content: '';
-        width: 32px;
-        height: 2px;
-        background-color: #E3B873;
-        margin: 0 10px; }
+.section--dark {
+  background-color: #131313;
+  color: #fff; }
+
+.section-title {
+  text-align: center; }
+  .section-title--left {
+    text-align: left; }
+  .section-title__heading {
+    text-transform: uppercase;
+    font-family: 'Yeseva One', cursive;
+    line-height: 138%; }
+    .section-title__heading--primary {
+      color: #E3B873; }
+  .section-title__word {
+    display: flex;
+    align-items: center;
+    margin-bottom: 1.6rem; }
+    .section-title__word::after {
+      content: '';
+      width: 90px;
+      height: 1.5px;
+      background-color: #E3B873;
+      margin-left: 2.4rem; }
+  .section-title__text {
+    font-size: 1.28rem;
+    line-height: 2.07rem;
+    max-width: 31.57rem; }
+  .section-title__image {
+    display: flex;
+    align-items: center;
+    justify-content: center; }
+    .section-title__image::before, .section-title__image::after {
+      content: '';
+      width: 32px;
+      height: 2px;
+      background-color: #E3B873;
+      margin: 0 10px; }
 
 .header {
   position: fixed;
@@ -665,15 +664,15 @@ img {
 .swiper-button-next {
   background: url("../img/arrow-next.svg") no-repeat center; }
 
-.projects__row {
-  padding-left: 0.7rem; }
-
-.projects__section-heading {
-  font-size: 1.8rem;
-  line-height: 2.64rem; }
-
-.projects__section-text {
-  margin-bottom: 2.14rem; }
+.projects {
+  padding-bottom: 2.29rem; }
+  .projects__row {
+    padding-left: 0.7rem; }
+  .projects__section-heading {
+    font-size: 1.8rem;
+    line-height: 2.64rem; }
+  .projects__section-text {
+    margin-bottom: 2.14rem; }
 
 .swiper-container-horizontal > .swiper-pagination-bullets {
   width: auto;
@@ -970,7 +969,7 @@ img {
   .contacts__button {
     display: none; }
   .hero {
-    max-height: 48rem;
+    max-height: 47.8rem;
     padding: 10px;
     justify-content: space-around;
     align-items: start; }
@@ -988,7 +987,7 @@ img {
     .hero__text {
       font-size: 1.5rem;
       margin-bottom: 3.2rem;
-      width: 26.5rem; }
+      max-width: 26.5rem; }
     .hero__button {
       display: block;
       width: 100%;
@@ -1041,15 +1040,18 @@ img {
     width: 96%; }
   .col-55 {
     width: 96%; }
-  .projects__row {
-    padding-left: 0.36rem; }
-  .projects__section-heading {
-    font-size: 1.67rem; }
-  .projects__section-text {
-    font-size: 1.17rem;
-    margin-right: 4rem;
-    margin-bottom: 0;
-    line-height: 1.95rem; }
+  .projects {
+    margin-top: -2rem;
+    padding-bottom: 2.29rem; }
+    .projects__row {
+      padding-left: 0.36rem; }
+    .projects__section-heading {
+      font-size: 1.67rem; }
+    .projects__section-text {
+      font-size: 1.17rem;
+      margin-right: 4rem;
+      margin-bottom: 0;
+      line-height: 1.95rem; }
   .swiper-slide {
     margin-bottom: 3.4rem; }
     .swiper-slide__text {
