--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -78,7 +78,7 @@
     &__button
       display: none
   .hero
-    max-height: 48rem
+    max-height: 47.8rem
     padding: 10px
     justify-content: space-around
     align-items: start
@@ -96,7 +96,7 @@
     &__text
       font-size: 1.5rem
       margin-bottom: 3.2rem
-      width: 26.5rem
+      max-width: 26.5rem
     &__button
       display: block
       width: 100%
@@ -154,6 +154,8 @@
     &-55
       width: 96%
   .projects
+    margin-top: -2rem
+    padding-bottom: 2.29rem
     &__row
       padding-left: 0.36rem
     &__section
