--- a/sass/_settings.sass
+++ b/sass/_settings.sass
@@ -10,7 +10,6 @@ img
 .svg-logo
   width: 28px
 .section
-  padding: 7.4rem 0
   &--dark
     background-color: $dark
     color: $light
