--- a/sass/templates/_projects.sass
+++ b/sass/templates/_projects.sass
@@ -40,6 +40,7 @@
     &-next
       background: url('../img/arrow-next.svg') no-repeat center
 .projects
+  padding-bottom: 2.29rem
   &__row
     padding-left: 0.7rem
   &__section
